well underway coding/decoding method linked variables and virtual fields; not done